--- a/estilos/estilo-header.css
+++ b/estilos/estilo-header.css
@@ -21,13 +21,14 @@ body{
     list-style: none;
     position: relative;
     background-color: var(--cor2);
-    padding: 20px 20px;
+    padding: 15px 20px;
 }
 
 .logo img{  width: 20px;
             float: left;
             width: 20%;
-            padding: 7px;
+            padding-left: 5px;
+           
 }
 
 .logo p{    padding-top: 4px;
@@ -101,6 +102,6 @@ body{
     .menu li{margin-top: 40px;}
     .menu li a {padding: 2px;}
     .open-menu , .close-menu{display: block;}
-    .close-menu{ margin-top: -105px;}
+    .close-menu{ margin-top: -114px;}
     #icheck:checked ~ .menu{right: 0;}
 }
